# mini-dns-server

./: Cargo.toml  config.toml  hosts  test_domain
src/: lib.rs  server.rs  shutdown.rs
src/db/: hosts.rs  mod.rs
src/dns/: frame.rs  mod.rs  processor.rs  types.rs
test_logpath/: mini-dns.log.2025-05-18
