[package]
name = "mini-dns-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mini_dns_server"
path = "src/bin/server.rs"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
config = "0.15.11"
notify = "8.0.0"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
tracing-test = "0.2.5"
